fix dragging out of screen issue, and disable selecting

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,20 @@
 @import 'chicago.css';
-
-/* body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-} */
 body {
   margin: 0;
-
+  // font
   font-family: ChigacoFLF, sans-serif;
+
+  //disables all text selection, makes dragging very smooth
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome and Opera */
 }
 
+//retro scroll bar styling
 ::-webkit-scrollbar,
 ::-webkit-scrollbar:horizontal {
   background-color: white;
@@ -33,7 +35,3 @@ body {
 ::-webkit-scrollbar-corner {
   background-color: whitesmoke;
 }
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
